WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84864
[Qt] Printing Page-Layouting broken (height unknown)
https://bugs.webkit.org/show_bug.cgi?id=84864
Summary
[Qt] Printing Page-Layouting broken (height unknown)
Milian Wolff
Reported
2012-04-25 07:50:13 PDT
Printing with the Qt port is currently broken, because the page height is not passed to the print context. This results in various issues, most prominently all those page-break-* CSS3 attributes are not handled. The reason that this was not catched by the existing unit tests, is that no ref/pixel test exists for this. Instead, the current tests use LTC::pageNumberForElementById which eventually calls PrintContext::pageNumberForElement, bypassing QWebFrame::print alltogether. The fix is trivial, one just needs to replace printContext.begin(pageRect.width()); with printContext.begin(pageRect.width(), pageRect.height()); in QWebFrame::print. I'll supply a patch for that. But I see no way to write a unit test for that (as that code creates PDFs). Anyhow, lets hope you will merge it anyways.
Attachments
Patch
(1.39 KB, patch)
2012-04-25 10:21 PDT
,
Milian Wolff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Milian Wolff
Comment 1
2012-04-25 10:21:10 PDT
Created
attachment 138835
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-02 08:07:19 PDT
Comment on
attachment 138835
[details]
Patch Clearing flags on attachment: 138835 Committed
r115832
: <
http://trac.webkit.org/changeset/115832
>
WebKit Review Bot
Comment 3
2012-05-02 08:07:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug